test/fixtures/type-error/global-assignment.ro
type i32
type f32

var x = 1

fun addOne(): i32 = {
  x = x + 1.0
}